# anime-news-scrapper

./: README.md  pyproject.toml  scrapy.cfg
anime_news_scraper/: items.py  middlewares.py  pipelines.py  settings.py
anime_news_scraper/spiders/: anime_news.py
data/: anime_details.json  index.html
notebooks/: check.ipynb
